# hrk-robot

./: Makefile  README.md  hrk-uart.c  hrk-uart.h  main.c
hrka/lib/mk/: 16MHzatmega168-pro.mk  16MHzatmega328-pro.mk  8MHzatmega168-pro.mk  8MHzatmega328-pro.mk  LilyPadUSB.mk  atmega1280-mega.mk  atmega168-bt.mk  atmega168-diecimila.mk  atmega168-lilypad.mk  atmega168-mini.mk  atmega168-nano.mk  atmega2560-mega.mk  atmega328-bt.mk  atmega328-diecimila.mk  atmega328-lilypad.mk  atmega328-mini.mk  atmega328-nano.mk  chiwawa.mk  circuitplay32u4cat.mk  esplora.mk  ethernet.mk  fio.mk  gemma.mk  leonardo.mk  leonardoeth.mk  megaADK.mk  micro.mk  one.mk  robotControl.mk  robotMotor.mk  uno.mk  unowifi.mk  yun.mk  yunmini.mk
old/: hrkblue.tcl  hrkblue.txt
old/hrkos-1/: Makefile  options.mk
old/hrkos-1/programs/: Makefile  sh.c
old/hrkos-1/src/: Makefile  hrkos-input.c  hrkos-sh.c  hrkos-timer2.c  hrkos.c  hrkos.h
old/hrkos-1/src/devices/: Makefile
old/robot-1/: Makefile.am  configure.ac  readme.txt
old/robot-1/old/: arduino-robot.mk
old/robot-1/src/: Makefile.am  bluetooth.c  bluetooth.h  coreutils.c  main.c  pwm.c  robot.c  robot.h  uart.c  uart.h
old/robot-2/: .gitignore
old/robot-2/old/: arduino-mega.mk
old/robot-2/src/: coreutils.h  pwm.h
